_includes/style.css
/* Layout https://jsbin.com/xuxoqi/edit */
@viewport {
    width: device-width;
}

html,
body {
    height: 100%;
}
html,
header,
img,
label,
iframe,
button,
.button,
.nav,
[disabled],
.unselectable,
[unselectable] {
    -webkit-user-select: none; /* Safari legacy */
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
}
html {
    overflow-x: hidden;
    overflow-y: scroll;
    max-width: 100%;
    min-width: 21em;
    color: #333;
    font: 62.45% / 1.5 sans-serif;
    text-rendering: optimizeSpeed;
    background-color: #f8f8f9;
    touch-action: manipulation;
    cursor: default;
    caret-color: currentcolor;
}
body,
dd,
dl,
iframe {
    margin: 0;
}
body {
    font-size: 1.7em;
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-hyphenate-limit-chars: 6 3 2;
        hyphenate-limit-chars: 6 3 2;
    -webkit-hyphens: auto;
        -ms-hyphens: auto;
            hyphens: auto;
}
a,
img {
    -webkit-user-drag: none;
            user-drag: none;
}
a {
    color: #00d;
    text-decoration: none;
    -webkit-box-decoration-break: clone; /* Chrome legacy, demo http://jsbin.com/xojoro/quiet */
            box-decoration-break: clone;
    outline: transparent solid 2px;
    -webkit-transition: outline .15s;
            transition: outline .15s;
}
[tabindex="-1"] {
    outline: 0;
    -webkit-transition: none;
            transition: none;
}
a:hover,
a:focus {
    color: #02a;
    text-decoration: underline;
}
a.absolute:hover,
a.absolute:focus,
a:not(.absolute):hover ~ a.absolute,
form:hover ~ a.absolute {
    outline-color: #4d90fe;
    outline-style: solid;
}
a[onclick] {
    cursor: pointer;
}
p a:not([class]) {
    /* iOS fix link text wrapping */
    word-break: break-word;
}
img {
    max-width: 100%;
    height: auto;
    vertical-align: top;
    -ms-interpolation-mode: nearest-neighbor; /* IE8-IE11 legacy */
    image-rendering: -webkit-optimize-contrast; /* Webkit will drop this property https://bugs.webkit.org/show_bug.cgi?id=97991#c5 */
    image-rendering: -moz-crisp-edges; /* Firefox legacy */
    image-rendering:      crisp-edges; /* Safari legacy */
    image-rendering: pixelated;
    -webkit-user-drag: none;
            user-drag: none;
}
a img {
    border: 0; /* IE10 fix */
}
header {
    position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
    right: 0;
    padding-right: .5em;
    padding-left: .5em;
    font-weight: bold;
    font-size: 106%;
    white-space: nowrap;
    background-color: #fff;
    border-bottom: 1px solid #ededed;
}
header a {
    display: inline-block;
}
header .wrapper,
footer .wrapper {
    min-width: 14.779em;
    max-width: 80em;
    margin: auto;
}
footer {
    overflow: hidden;
    padding: 0 2.4em;
    margin-top: -2.5em;
    font-size: 106%;
    line-height: 2.2;
    text-align: left;
    text-overflow: ellipsis;
    border-top: 1px solid #eee;
}
.stretch footer {
    border-top-color: transparent;
}
footer .wrapper a {
    color: #666;
    font-size: 96%;
}
.stretch.stretch footer .wrapper a {
    color: #fff;
}
footer a + a {
    margin-right: 1.6em;
}
nav {
    /* position: relative; */
    display: inline-block;
    text-align: center;
    vertical-align: top; /* IE too big padding */
    background-color: #fff;
}
/* nav:before {
    content: "";
    position: absolute;
    top: 0;
    right: -3em;
    bottom: 0;
    width: 3em;
    background-image: linear-gradient(to right, #fff, rgba(255,255,255,0));
} */
nav a {
    position: relative;
    padding: 1em 1.4em;
    color: inherit;
    vertical-align: top;
}
nav a:hover,
nav a:focus,
.bar:hover,
.bar:focus {
    color: inherit;
    text-decoration: none;
    background-color: #f8f8f9;
}
nav .active.active {
    color: #f58e84;
}
nav .active:after {
    content: "";
    display: block;
    position: absolute;
    left: 1em;
    right: 1em;
    bottom: -1px;
    height: .2em;
    background-color: #f58e84;
}
.external.external {
    padding: 1.2em .35em;
    background-color: transparent;
    -webkit-filter: grayscale(100%);
            filter: grayscale(100%);
}
.external.external:hover,
.external.external:active {
    -webkit-filter: none;
            filter: none;
}
[class*=icon-]:not(svg) {
    height: 20px;
    background-image: url(/assets/sprites.png);
    background-repeat: no-repeat;
}
.icon-youtube {
    width: 39px;
}
.icon-facebook {
    width: 20px;
    background-position: -40px 0;
}
a.logo {
    float: right;
    color: #f58e84;
    text-decoration: none;
}
.logo:hover,
.logo:active {
    -webkit-filter: grayscale(70%);
            filter: grayscale(70%);
}
.logo img {
    margin: .45em;
    vertical-align: middle;
}
.logo div {
    display: inline-block;
    vertical-align: middle;
}
main {
    display: block;
        width: 100%;
    min-width: 12.6em;
    max-width: 84.78em;
    min-height: 100%;
    padding-top: 3.7em;
    padding-bottom: 2.6em;
    margin: auto;
    box-sizing: border-box;
    -webkit-user-select: text; /* Safari legacy */
       -moz-user-select: text;
        -ms-user-select: text;
            user-select: text;
}

.list {
    padding: 0;
    margin: 0 0 3em;
    list-style: none;
}
.items li,
.box {
    position: relative;
    display: inline-block;
    width: 100%;
    padding: 2.1em;
    box-sizing: border-box;
}
.video + .box {
    margin-bottom: 3em;
}
.items.items li,
.box.box {
    background-color: #fff;
}
.box.no-padding {
    padding: 0;
}
.items li:before,
.items li:after,
.box:before,
.box:after {
    content: "";
    position: absolute;
    z-index: -1;
    bottom: 15px;
    width: 50%;
    height: 20%;
    max-width: 300px;
    max-height: 100px;
    box-shadow: 0 15px 10px rgba(51,51,51,.3);
}
.items li:before,
.box:before {
    left: 8px;
    -webkit-transform: rotate(-2deg);
            transform: rotate(-2deg);
}
.items li:after,
.box:after {
    right: 8px;
    -webkit-transform: rotate(2deg);
            transform: rotate(2deg);
}
/* ... */

